--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "London Tube Departures",
-    "short_name": "TubeDepartures",
+    "name": "London Rura",
+    "short_name": "London Rura",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#ffffff",
